--- a/index.html
+++ b/index.html
@@ -6,37 +6,23 @@
    </head>
    <body>
    	     <h1>ALGUNOS LENGUAJES DE LA WEB</h1>
-
-
-   	     <ul> HTML + CSS + JAVASCRIPT
-
-              <li>html5
-
-              	  <div>
-              	  	  <img src="img/html.png"/>
-              	  </div>
+         <h2>HTML + CSS + JAVASCRIPT</h2>
+   	     <ul> 
+              <li><h4>html5</h4>
+                  <img src="img/html.png"/>
               	  <p><b>HTML5</b><i>(hipertext markup language, version 5)</i> es la quinta revison innportante del lenguaje basico de la <a href="#" target="blank">world wide web</a>. HTML </p>
-
                   <p><b>Usa la extension</b> <i>.html</i></p>
-
               </li>
-
-              <li>CSS3
-              	   <div>
-                       <img src="img/css.png"> 
-                   </div>
+              <li><h4>CSS3</h4> 
+              	   <img src="img/css.png"> 
                    <p><b>hoja de estilo de cascada o CSS</b> (siglas en ingles de <i>cascading style sheets</i>)es un lenguaje usado para definir y crear la presentacion de un documento estructurado escrito en HTML. </p>
                    <p><b>usa la extención</b> <i>css</i></p>
               </li>
-
-              <li>JavaScript
-                    <div>
-                        <img src="img/js.png"/>
-                    </div>
-                    
-                    <p><b>javascript</b><i>(abreviado comunmente <b>"JB"</b>)</i> es un lenguaje de programacion interpretado utilizado principalmente en el lado del cliente <i>(client-side)</i>,implementado como parte de un navegador web permitiendo mejoras en la interfaz de usuario y paginas web dinamicas</p>
-                    <p><b>usa la extension</b><i>.js</i></p>
+              <li><h4>JavaScript</h4>
+                   <img src="img/js.png"/>
+                   <p><b>javascript</b><i>(abreviado comunmente <b>"JB"</b>)</i> es un lenguaje de programacion interpretado utilizado principalmente en el lado del cliente <i>(client-side)</i>,implementado como parte de un navegador web permitiendo mejoras en la interfaz de usuario y paginas web dinamicas</p>
+                   <p><b>usa la extension</b><i>.js</i></p>
               </li>
-           </ul>
+          </ul>
    </body>
 </html>
