--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                    <img src="img/js.png"/>
                    <p><b>javascript</b><i>(abreviado comunmente <b>"JB"</b>)</i> es un lenguaje de programacion interpretado utilizado principalmente en el lado del cliente <i>(client-side)</i>,implementado como parte de un navegador web permitiendo mejoras en la interfaz de usuario y paginas web dinamicas</p>
                    <p><b>usa la extension</b><i>.js</i></p>
+
               </li>
           </ul>
+          <p>Anabel.... soy yo Elizabeth!!!</p>
    </body>
 </html>
